add basic api-key authentication
